--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-aiogram==3.4.1
-aiohttp==3.9.3
-google-auth==2.29.0
-gspread==5.12.4
+aiogram==3.10.0
+aiohttp
+gspread
+google-auth
+python-dotenv
 pytz
